[tool.poetry]
name = "nonebot_plugin_poke"
version = "0.0.6"
description = "群聊戳戳事件 plugin for NoneBot2"
authors = ["Agnes_Digital <Z735803792@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Agnes4m/nonebot_plugin_poke"
repository = "https://github.com/Agnes4m/nonebot_plugin_poke"
keywords = ["nonebot2", "plugin","event"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE","README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = ">=2.1.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
